@@ -23,7 +23,7 @@
                      $attrib_clobfile
                      $attrib_dbclobfile );
 
-    $VERSION = '1.87';
+    $VERSION = '1.88';
     require_version DBI 1.41;
 
     bootstrap DBD::DB2;
