@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-DB2
-version:      1.87
+version:      1.88
 version_from: DB2.pm
 installdirs:  site
 requires:
