@@ -25,7 +25,7 @@
 
     On UNIX:
 	export DB2_HOME=<path to CLI DRIVER installation>/clidriver
-	export PERL5LIB=~/lib/perl5/lib/perl5/site_perl:$HOME/DBD-DB2-1.86/tests:$HOME/DBD-DB2-1.86/Constants
+	export PERL5LIB=~/lib/perl5/lib/perl5/site_perl:$HOME/DBD-DB2-1.88/tests:$HOME/DBD-DB2-1.88/Constants
 	
     perl Makefile.PL            # use a perl that's in your PATH
     make
@@ -47,7 +47,7 @@
     nmake test
     nmake install
 	
-*** BUILDING on AIX
+*** BUILDING on AIX(tested on 1.86)
 
 Installation instruction for DBD::DB2 on AIX, with Perl 5.28.1:
 
